add music subtitle